<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/darkgrey"
    android:padding="5dp"
    >



    <Spinner
        android:id="@+id/filterKvizova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/options"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaKvizova"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterKvizova"
         />


</RelativeLayout>