<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/kvizovi"
        android:icon="@drawable/quiz_icon"
        android:title="Kvizovi"
        />
    <item
        android:id="@+id/predmeti"
        android:icon="@drawable/upisi_icon"
        android:title="Upis predmeta"/>

    <item
        android:id="@+id/predajKviz"
        android:icon="@drawable/cancel_icon"
        android:title="Predaj kviz"
        android:visible="false"
        />

    <item
        android:id="@+id/zaustaviKviz"
        android:icon="@drawable/predaj_icon"
        android:title="Zaustavi kviz"
        android:visible="false"
        />




</menu>