<resources>
    <string name="app_name">rma21projekat</string>
    <string name="upisiMe">Upiši me</string>
    <string-array name="options">
        <item>Svi moji kvizovi</item>
        <item>Svi kvizovi</item>
        <item>Urađeni kvizovi</item>
        <item>Budući kvizovi</item>
        <item>Prošli kvizovi</item>
    </string-array>
</resources>