<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/tekstPitanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />


    <ListView
        android:id="@+id/odgovoriLista"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tekstPitanja"
        android:layout_marginTop="10dp"
        />

</RelativeLayout>