<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<com.google.android.material.navigation.NavigationView
    android:id="@+id/navigacijaPitanja"
    android:layout_width="120dp"
    android:layout_height="match_parent"
    app:itemBackground="@color/black"
    android:background="@color/greengrey"
    />


   <FrameLayout
       android:id="@+id/framePitanje"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_toRightOf="@+id/navigacijaPitanja"
       >

   </FrameLayout>

</RelativeLayout>